<resources>
    <string name="app_name">IT CRON</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_logo">company logo</string>
    <string name="image">image</string>
    <string name="onboarding_six_head">ПРОЕКТНЫЙ \nПОДХОД</string>
    <string name="onboarding_six_content">Качественно организовываем \nдеятельность для заимодействия \nнаших сотрудников и Заказчика</string>
    <string name="next">Далее</string>
    <string name="onboarding_seven_head">ПРОДУКТОВЫЙ \nПОДХОД</string>
    <string name="onboarding_seven_content">Оказываем услуги \nи выдаём тот результат, который \nнеобходим Заказчику и рынку</string>
    <string name="onboarding_five_head">КЕЙСЫ</string>
    <string name="onboarding_five_content">Понравился продукт? Хотите его обсудить? Мы с радостью ответим на все ваши вопросы :)</string>
    <string name="start">Начать</string>
    <string name="image_squares">image squares</string>
    <string name="cases">Кейсы</string>
    <string name="company">Компания</string>
    <string name="services">Услуги</string>
    <string name="contacts">Контакты</string>
    <string name="new_application">Оставить \nзаявку</string>
    <string name="email_it_cron">hello@it-cron.ru</string>
    <string name="button_facebook">button facebook</string>
    <string name="button_instagram">button instagram</string>
    <string name="button_telegram">telegram</string>
    <string name="background_image">background image</string>
    <string name="close_button">close</string>
    <string name="not_internet_connection">Нет интернет \nсоединения</string>
    <string name="filter">Фильтр</string>
    <string name="back">back</string>
    <string name="empty_list">По вашему запросу ничего не найдено.</string>
    <string name="filters">Фильтры</string>
    <string name="clean">clean</string>
    <string name="task">Задача</string>
    <string name="technologies">Технология</string>
    <string name="platform">Платформа</string>
    <string name="google_play">Google Play</string>
    <string name="app_store">App Store</string>
    <string name="web_site">web site</string>
    <string name="become_a_customer">Стать клиентом или партнером!</string>
    <string name="next_case">Следующий кейс</string>
    <string name="back_on_main">Вернуться на \nГлавную</string>
    <string name="case_title">Кейс</string>
    <string name="example_ui">Примеры интерфейса</string>
    <string name="icon">icon</string>
    <string name="splash">Splash</string>
    <string name="about_company">У меня уже был опыт управления другой компанией. \nВ этой компании было несколько партнеров и несмотря на то, \nчто общее движение было согласованным, некоторые реализации я видел по-другому. Поэтому в конце 2018 года \nя решил, что хочу реализовать свои идеи на все 100%. \nВ какой-то мере это был некий челендж. Сейчас все идет по плану :)\n\nПо поводу названия. IT – очевидно, потому что мы работаем в IT, \nа CRON – связано с Linux планировщиком и это отсылка \nк тому, что мы работаем, как часы. \nМы предоставляем услуги точно \nв срок и с отличным качеством. \nНаш слоган – cron as expected ;)</string>
    <string name="avatar">avatar</string>
    <string name="cron_as_expected">CRON AS EXPECTED</string>
    <string name="slogan">вот наш слоган</string>
    <string name="design_and_product">ПРОЕКТНО-\nПРОДУКТОВЫЙ</string>
    <string name="development_approach">подход к разработке программного обеспечения</string>
    <string name="design">Проектный</string>
    <string name="design_description">Позволяет нам качественно организовать деятельность для взаимодействия наших сотрудников и Заказчика</string>
    <string name="product">Продуктовый</string>
    <string name="product_description">Оказывать услуги и выдавать тот результат, который необходим Заказчику и рынку</string>
    <string name="name_of_the_founder">Пухов Александр Сергеевич</string>
    <string name="position">Учредитель и руководитель \nООО «АЙТИ КРОН»</string>
    <string name="about_company_title">Несколько слов о зарождении и названии компании</string>
    <string name="clients">Мы сотрудничаем с клиентами, мыслящими на перспективу, чтобы трансформировать идеи в реальные продукты.</string>
    <string name="reviews">Отзывы клиентов</string>
    <string name="watch_all">Смотреть все</string>
    <string name="look_what_we_breathe">Взгляните чем мы дышим</string>
    <string name="instagram"><u>Instagram</u></string>
    <string name="facebook"><u>Facebook</u></string>
    <string name="telegram"><u>Telegram</u></string>
    <string name="join_us">Присоединяйтесь к команде</string>
    <string name="join_us_description">Таланты всегда приветствуются. Отправляй свое портфолио по адресу" </string>
    <string name="country">Россия, Москва</string>
    <string name="address">119330, ул. Мосфильмовская, 35 \n+7 (495) 006-13-57</string>
    <string name="contact_via">Связаться через</string>
    <string name="dots">dots</string>
    <string name="make_application">Оставьте заявку, либо звоните, мы пообщаемся\nи сами все за вас заполним: \n+7 (495) 006-13-57</string>
    <string name="processing_of_personal_data">Даю согласие на обработку персональных данных</string>
    <string name="privacy_policy">Соглашаюсь с политикой конфиденциальности</string>
    <string name="processing_of_personal_data_text">Обработка персональных данных\nНастоящим я, далее – «Субъект Персональных Данных», во исполнение требований Федерального закона от 27.07.2006 г. № 152-ФЗ «О персональных данных» (с изменениями и дополнениями) свободно, своей волей и в своем интересе даю свое согласие на обработку своих персональных данных сайту , далее «Сайту», указанных при регистрации путем заполнения веб-формы на данном сайте. \n\nПод персональными данными я понимаю любую информацию, относящуюся ко мне как к Субъекту Персональных Данных, в том числе мои фамилию, имя, отчество, адрес, образование, профессию, контактные данные (телефон, факс, электронная почта, почтовый адрес), фотографии, иную другую информацию. \n\nПод обработкой персональных данных я понимаю сбор, систематизацию, накопление, уточнение, обновление, изменение, использование, распространение, передачу, в том числе трансграничную, обезличивание, блокирование, уничтожение, бессрочное хранение), и любые другие действия (операции) с персональными данными. Обработка персональных данных Субъекта Персональных Данных осуществляется исключительно в целях регистрации Субъекта Персональных Данных в базе данных Сайта с последующим направлением Субъекту Персональных Данных почтовых сообщений и смс-уведомлений, в том числе рекламного содержания, от Сайта, его аффилированных лиц и/или субподрядчиков, информационных и новостных рассылок, приглашений на мероприятия Сайтаи другой информации рекламно-новостного содержания, а также с целью подтверждения личности Субъекта Персональных Данных при посещении мероприятий Сайта. \n\nДатой выдачи согласия на обработку персональных данных Субъекта Персональных Данных является дата отправки регистрационной веб-формы с Сайта. Обработка персональных данных Субъекта Персональных Данных может осуществляться с помощью средств автоматизации и/или без использования средств автоматизации в соответствии с действующим законодательством РФ и внутренними положениями Сайта. \n\nШкола принимает необходимые правовые, организационные и технические меры или обеспечивает их принятие для защиты персональных данных от неправомерного или случайного доступа к ним, уничтожения, изменения, блокирования, копирования, предоставления, распространения персональных данных, а также от иных неправомерных действий в отношении персональных данных, а также принимает на себя обязательство сохранения конфиденциальности персональных данных Субъекта Персональных Данных. \n\nШкола вправе привлекать для обработки персональных данных Субъекта Персональных Данных субподрядчиков, а также вправе передавать персональные данные для обработки своим аффилированным лицам, обеспечивая при этом принятие такими субподрядчиками и аффилированными лицами соответствующих обязательств в части конфиденциальности персональных данных. \n\nЯ ознакомлен(а), что: - настоящее согласие на обработку моих персональных данных, указанных при регистрации на Сайте Сайта, направляемых (заполненных) с использованием Cайта, - действует в течение 20 (двадцати) лет с момента регистрации на Cайте Сайта; - согласие может быть отозвано мною на основании письменного заявления в произвольной форме; - предоставление персональных данных третьих лиц без их согласия влечет ответственность в соответствии с действующим законодательством Российской Федерации.\n</string>
    <string name="ok">ok</string>
    <string name="requisites">Реквизиты</string>
    <string name="work_schedule">График работы</string>
    <string name="locale">Расположение</string>
    <string name="full_address">г. Москва, ул. Мосфильмовская, д. 35, с. 2, офис 301</string>
    <string name="map">map</string>
    <string name="portfolio">Таланты всегда приветствуются. Отправляй свое портфолио по адресу "</string>
</resources>