<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.contacts.ContactsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:contentDescription="@string/background_image"
        android:src="@drawable/background_cases_fragment" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="?attr/actionBarSize">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                    <TextView
                        android:id="@+id/buttonInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/instagram"
                        android:textColor="@color/selector_text_button_orange"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/buttonFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/facebook"
                        android:textColor="@color/selector_text_button_orange"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/buttonInstagram"
                        app:layout_constraintTop_toBottomOf="@id/buttonInstagram" />

                    <TextView
                        android:id="@+id/buttonTelegram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="32dp"
                        android:text="@string/telegram"
                        android:textColor="@color/selector_text_button_orange"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/buttonInstagram"
                        app:layout_constraintTop_toBottomOf="@id/buttonFacebook" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="38dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/logo_company"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/work_schedule"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/timeWorkContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/locale"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/full_address"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/map"
                    android:scaleType="centerCrop"
                    android:src="@drawable/map" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/requisites"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/requisitesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="64dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/join"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="40dp"
                        android:lineSpacingExtra="8dp"
                        android:text="@string/join_us"
                        android:textColor="@color/orange"
                        android:textSize="24sp"

                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPortfolio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:autoLink="email"
                        android:lineSpacingExtra="8dp"
                        android:textColor="@color/black"
                        android:textColorLink="@color/orange"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/join"
                        tools:text="@string/portfolio" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/customerContainer"
                layout="@layout/become_a_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#E6000000">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:icon="@drawable/ic_arrow_back_24"
            app:iconSize="32dp"
            app:iconTint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShare"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="20dp"
            app:icon="@drawable/ic_outline_share_24"
            app:iconSize="32dp"
            app:iconTint="@color/orange" />
    </Toolbar>

</FrameLayout>